<?xml version="1.0"?>
<package format="2">
  <name>task_supervisor</name>
  <version>0.0.0</version>
  <description>The task_supervisor package</description>

  <maintainer email="dennis.luensch@iml.fraunhofer.de">Dennis Luensch</maintainer>

  <license>TODO</license>

  <author email="dennis.luensch@iml.fraunhofer.de">Dennis Luensch</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>mars_common</depend>

</package>
